--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<!-- Start of  Zendesk Widget script -->
-<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=8bd1b71a-ff84-437d-a53b-3af6d91d14a8"> </script>
-<!-- End of  Zendesk Widget script -->
-
-  
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Pagamento • Dieta Pronta Online</title>
@@ -50,7 +45,7 @@
           <div id="fallbackLink" class="mt-3"></div>
 
           <div class="mt-6 p-4 rounded-xl bg-amber-50 border border-amber-200 text-amber-900 text-sm">
-            <strong>Como funciona:</strong> após pagar por <em>Pix</em>, a confirmação costuma ocorrer em poucos minutos. Assim que aprovado, você será redirecionado automaticamente.
+            <strong>Como funciona:</strong> após pagar por <em>Pix</em>, a confirmação costuma ocorrer em poucos minutos. Assim que aprovado, você será redirecionado e seu WhatsApp abrirá automaticamente para receber o plano.
           </div>
         </div>
       </section>
@@ -83,69 +78,65 @@
 
   <script>
   (function(){
-    const MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
-    const MP_ENDPOINT   = "https://dietapronta.online/api/mp-preference";
-    const CHECK_STATUS  = "https://italomelo.com/server/check_status.php";
-    const HOME_APPROVED = "https://dietapronta.online/approved";
-    const HOME_FAILURE  = "https://dietapronta.online/?status=failure#quiz";
+    var MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
+    var MP_ENDPOINT   = "https://dietapronta.online/api/mp-preference";
+    var CHECK_STATUS  = "/api/mp-check-status";
+    var HOME_APPROVED = "https://dietapronta.online/approved";
+    var HOME_FAILURE  = "https://dietapronta.online/?status=failure#quiz";
 
     function $(id){ return document.getElementById(id); }
 
     function showBanner(texto, classes){
-      const banner = $("statusBanner");
+      var banner = $("statusBanner");
       banner.textContent = texto;
       banner.className = "mt-4 mb-2 rounded-xl px-4 py-3 text-sm border " + classes;
       banner.classList.remove("hidden");
     }
 
-    function getParam(key){ return new URLSearchParams(location.search).get(key) || ""; }
+    // ===== Recupera o mesmo ref criado no pré-pagamento =====
+    function getQS(k){ return new URLSearchParams(location.search).get(k) || ''; }
 
-    // Recupera o ref (igual ao banco)
-    let ref = getParam("ref") || "";
+    var ref = getQS("ref") || "";
     if (!ref) {
       try { ref = localStorage.getItem("mp_external_ref") || ""; } catch(e){}
     }
 
-    // Dados do cliente
-    let customer_name  = localStorage.getItem("lead_nome")  || getParam("nome")  || "";
-    let customer_email = localStorage.getItem("lead_email") || getParam("email") || "";
-    let customer_whats = localStorage.getItem("lead_whats") || getParam("whats") || "";
+    // Se mesmo assim não houver, cria um fallback (último caso)
+    if (!ref) {
+      ref = 'ref-' + Date.now() + '-' + Math.random().toString(36).substr(2,6);
+      try { localStorage.setItem("mp_external_ref", ref); } catch(e){}
+    }
 
-    const mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
+    // Garante que o ref apareça na URL
+    var u = new URL(location.href);
+    u.searchParams.set("ref", ref);
+    history.replaceState(null, "", u.toString());
 
-    // 🔹 Renderiza e ABRE AUTOMATICAMENTE o checkout
+    // ===== Dados do lead (nome/email/whats) — da URL ou localStorage =====
+    function getParam(key){ return new URLSearchParams(location.search).get(key) || ""; }
+    var customer_name="", customer_email="", customer_whats="";
+    try {
+      customer_name  = localStorage.getItem("lead_nome")  || "";
+      customer_email = localStorage.getItem("lead_email") || "";
+      customer_whats = localStorage.getItem("lead_whats") || "";
+    } catch(e){}
+    if(!customer_name)  customer_name  = getParam("nome");
+    if(!customer_email) customer_email = getParam("email");
+    if(!customer_whats) customer_whats = getParam("whats");
+
+    var mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
+
     function renderCheckout(prefId, initPoint){
       mp.checkout({ preference: { id: prefId }, render: { container: "#mp-checkout", label: "Pagar R$ 9,90" } });
-
       if(initPoint){
-        const a=document.createElement("a");
-        a.href=initPoint;
-        a.target="_blank";
-        a.rel="noopener";
-        a.className="text-sm underline block mt-3";
-        a.textContent="⚠️ Caso o pagamento não abra automaticamente, clique aqui.";
+        var a=document.createElement("a");
+        a.href=initPoint; a.target="_blank"; a.rel="noopener";
+        a.className="text-sm underline"; a.textContent="⚠️ Se o botão não abrir, clique aqui para pagar";
         $("fallbackLink").appendChild(a);
-
-        // 🚀 Abre automaticamente o checkout
-        setTimeout(() => {
-          try {
-            const payBtn = document.querySelector("#mp-checkout button, #mp-checkout iframe");
-            if (payBtn) {
-              if (payBtn.click) payBtn.click();
-              else window.location.href = initPoint;
-              console.log("[auto-open] Checkout aberto automaticamente");
-            } else {
-              window.location.href = initPoint;
-            }
-          } catch (e) {
-            console.error("[auto-open] erro ao abrir automaticamente:", e);
-            window.location.href = initPoint;
-          }
-        }, 1000);
       }
     }
 
-    // 🔹 Cria a preferência no backend
+    // ===== Cria a preferência com o mesmo ref sincronizado =====
     fetch(MP_ENDPOINT, {
       method: "POST",
       headers: { "Content-Type":"application/json" },
@@ -153,58 +144,43 @@
         valor: 9.90,
         titulo: "Plano de Dieta Completo",
         external_reference: ref,
-        customer_name,
-        customer_email,
-        customer_whatsapp: customer_whats
+        customer_name: customer_name || "",
+        customer_email: customer_email || "",
+        customer_whatsapp: customer_whats || ""
       })
     })
-    .then(r => r.json())
-    .then(data => {
+    .then(function(r){ return r.text().then(function(txt){ var data={}; try{data=JSON.parse(txt);}catch{} if(!r.ok) throw new Error("HTTP "+r.status+" "+txt); if(!data.id) throw new Error("Preferência sem id: "+txt); return data; }); })
+    .then(function(data){
       renderCheckout(data.id, data.init_point);
-      showBanner("Aguardando pagamento... Assim que o PIX for aprovado, você será redirecionado automaticamente.", "bg-amber-50 border-amber-300 text-amber-800");
+      showBanner("Aguardando pagamento. Após pagar por Pix, a confirmação costuma sair em poucos minutos.", "bg-amber-50 border-amber-300 text-amber-800");
       startPolling();
     })
-    .catch(err => {
-      console.error("[mp-preference]", err);
-      showBanner("Erro ao iniciar o pagamento. Tente novamente.", "bg-rose-50 border-rose-300 text-rose-800");
+    .catch(function(err){
+      console.error("[mp-preference] erro:", err);
+      showBanner("Não foi possível iniciar o pagamento agora. Tente reabrir esta página ou volte para a página principal.", "bg-rose-50 border-rose-300 text-rose-800");
     });
 
-    let pollTimer=null;
-    function startPolling(){ checkNow(); pollTimer=setInterval(checkNow, 5000); }
+    // ===== Verifica status periodicamente =====
+    var pollTimer=null;
+    function startPolling(){ checkNow(); pollTimer=setInterval(checkNow, 12000); }
 
-    // 🔹 Verificação do status e redirecionamento
     async function checkNow(){
       try {
-        const res = await fetch(CHECK_STATUS + "?ref=" + encodeURIComponent(ref) + "&t=" + Date.now());
-        const data = await res.json();
-
-        if (!data || !data.found) return;
-
-        const status = (data.status || "").toLowerCase();
-        console.log("[status-check]", status, "ref=", ref);
-
-        if (status === "approved") {
-          if (pollTimer) clearInterval(pollTimer);
-          showBanner("✅ Pagamento aprovado! Redirecionando...", "bg-emerald-50 border-emerald-300 text-emerald-800");
-          setTimeout(() => {
-            window.location.href = HOME_APPROVED + "?ref=" + encodeURIComponent(ref);
-          }, 2000);
-        } else if (["rejected", "cancelled", "canceled"].includes(status)) {
-          if (pollTimer) clearInterval(pollTimer);
-          showBanner("Pagamento não aprovado. Tente novamente.", "bg-rose-50 border-rose-300 text-rose-800");
-          setTimeout(() => {
-            window.location.href = HOME_FAILURE;
-          }, 2500);
-        } else if (status === "pending") {
-          showBanner("⏳ Aguardando confirmação do PIX...", "bg-amber-50 border-amber-300 text-amber-800");
+        var r = await fetch(CHECK_STATUS + "?ref=" + encodeURIComponent(ref));
+        var data = await r.json();
+        if(data && data.found){
+          if(data.status === "approved"){
+            if(pollTimer) clearInterval(pollTimer);
+            showBanner("Pagamento aprovado! Redirecionando…", "bg-emerald-50 border-emerald-300 text-emerald-800");
+            setTimeout(function(){ location.href = HOME_APPROVED; }, 800);
+          } else if(data.status === "rejected" || data.status === "cancelled" || data.status === "canceled"){
+            if(pollTimer) clearInterval(pollTimer);
+            showBanner("Pagamento não aprovado. Você pode tentar novamente.", "bg-rose-50 border-rose-300 text-rose-800");
+            setTimeout(function(){ location.href = HOME_FAILURE; }, 1200);
+          }
         }
-      } catch (e) {
-        console.error("[status-check] erro", e);
-      }
+      } catch(e){}
     }
-
-    // Atualiza quando o usuário volta para a aba
-    window.onfocus = () => checkNow();
 
     $("year").textContent = new Date().getFullYear();
   })();
