--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -80,7 +80,7 @@
   (function(){
     var MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
     var MP_ENDPOINT   = "https://dietapronta.online/api/mp-preference";
-    var CHECK_STATUS  = "/api/mp-check-status";
+    var CHECK_STATUS  = "https://italomelo.com/server/check_status.php";
     var HOME_APPROVED = "https://dietapronta.online/approved";
     var HOME_FAILURE  = "https://dietapronta.online/?status=failure#quiz";
 
